Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0
-
Android 4.4
-
06e27c2a52a4bd98bc102de0875df9918166d130
Description
Android crashes accessing null pointer accessible interfaces straight from Java. Backtraces are useless since they start with a nullpointer being accessed.
Attachments
For Gerrit Dashboard: QTBUG-38829 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
84844,1 | Accessibility Android: Fix crash for invalid interfaces | stable | qt/qtbase | Status: MERGED | +2 | 0 |